<resources>
    <string name="app_name">Echo</string>
    <string name="action_settings">Settings</string>
    <string name="tipsUserName">在此输入用户名</string>
    <string name="tipsPwd">在此输入密码</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="refresh">刷新</string>
    <string name="userName">用户名：</string>
    <string name="password">密码：</string>\
    <string name="showSp">根据键显示SP数据</string>
    <string name="writeSp">将SP数据写入到文件</string>
    <string name="testOpration">测试操作</string>
    <string name="query">查询</string>
    <string name="call">电话</string>
    <string name="share">分享</string>
    <string name="web">网页</string>
    <string name="map">地图</string>
    <string name="mail">邮件</string>
    <string name="calendar">日历事件</string>
    <string name="chooseContact">选择联系人</string>
    <string name="getAllContact">所有联系人</string>
    <string name="testText">测试文本：</string>
    <string name="finish">完成</string>
    <string name="playMusic">播放音乐</string>
    <string name="endMusic">结束播放</string>

</resources>
