<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aohan.zl.echo.echo.IntentDemoActivity">
    <LinearLayout
        android:id="@+id/llOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/call"
            android:onClick="toCall"
            />
        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/share"
            android:onClick="toShare"
            />
        <Button
            android:id="@+id/btnWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/web"
            android:onClick="toWeb"
            />
        <Button
            android:id="@+id/btnMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:onClick="toMail"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/llOp"
        android:id="@+id/llOp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/map"
            android:onClick="toMap"
            />
        <Button
            android:id="@+id/btnCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/calendar"
            android:onClick="toCalendar"
            />
        <Button
            android:id="@+id/btnContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/chooseContact"
            android:onClick="toContact"
            />
        <Button
            android:id="@+id/btnAllContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/getAllContact"
            android:onClick="getAllContact"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/llOp2"
        android:id="@+id/llOp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnShowHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="显示头像"
            android:onClick="showHead"
            />

    </LinearLayout>
    <ImageView
        android:layout_below="@id/llOp3"
        android:id="@+id/ivHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ListView
        android:layout_below="@id/llOp3"
        android:id="@+id/lvShowContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>

</RelativeLayout>
