<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="aohan.zl.echo.echo.MainActivity">

    <LinearLayout
        android:id="@+id/lluserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:paddingTop="10dp"
            android:textSize="24dp"

            />
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipsUserName"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/tvUserName"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:layout_below="@id/lluserName"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:id="@+id/tvPwd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_below="@id/tvUserName"
            android:paddingTop="10dp"
            android:textSize="24dp"
            />


        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipsPwd"
            android:layout_below="@id/etUserName"
            android:layout_centerHorizontal="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:layout_below="@id/llPassword"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="doLogin"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="doReset"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llShowSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:layout_below="@id/llBtn"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/etSearchKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tipsUserName"
            />
        <Button
            android:id="@+id/btnShowSp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showSp"
            android:onClick="showSp"
            />
        <Button
            android:id="@+id/btnWriteSp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writeSp"
            android:onClick="writeSpTofile"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llShowSp"
        >
        <Button
            android:id="@+id/btnShowTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/testOpration"
            android:onClick="showTest"
            />
        <Button
            android:id="@+id/btnQueryDb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/query"
            android:onClick="queryByName"
            />
        <Button
            android:id="@+id/btnRevoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="撤销所有权限"
            android:onClick="doRevoke"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llShowTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llShowSp"
        >
        <TextView
            android:id="@+id/tvShowSp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="跳转MenuActivity"
        android:id="@+id/btn_ToMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="跳转IntentActivity"
        android:id="@+id/btn_ToIntent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:onClick="toIntentActivity"/>

</RelativeLayout>
